# rl-chess

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: alphago-from-scratch-lessons.md
docs/plans/: 2026-05-25-rl-mcts-self-play-modal.md
scripts/: show_latest_model_game.py  train_puct_nn_report.py
src/rl_chess/: __init__.py  agents.py  cli.py  endgame_validation.py  env.py  mcts.py  modal_app.py  nn_model.py  puct_mcts.py  replay.py  run_presets.py  search_self_play.py  self_play.py  state.py  train.py  validation.py
tests/: test_core.py  test_core_loops.py  test_mcts.py  test_mcts_training.py  test_modal_app.py  test_neural_training.py  test_puct_mcts.py
