[project]
name = "rl-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.4.3",
    "numpy>=2.4.6",
    "python-chess>=1.999",
    "torch>=2.12.0",
]

[project.scripts]
rl-chess = "rl_chess.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
